--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
+    "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.0.0",
     "@angular/material": "^17.3.9",
     "@angular/platform-browser": "^17.0.0",
@@ -23,6 +24,7 @@
     "@ngrx/component-store": "^17.2.0",
     "@ngrx/effects": "^17.2.0",
     "@ngrx/store": "^17.2.0",
+    "firebase": "^10.12.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
